[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/cinematics/MenuOption.png" type="Texture" id=1]
[ext_resource path="res://sprites/Menu/OptionsTextureRect.gd" type="Script" id=2]
[ext_resource path="res://fonts/PressStart2P.tres" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Bwahh.ttf" type="DynamicFontData" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[node name="ContinueRect" type="TextureRect"]
material = SubResource( 1 )
margin_left = 269.0
margin_top = 195.5
margin_right = 755.0
margin_bottom = 404.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
stretch_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueOptionsOrganizer" type="VBoxContainer" parent="."]
margin_left = 32.5816
margin_top = 23.0
margin_right = 462.582
margin_bottom = 192.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuTitle" type="Label" parent="ContinueOptionsOrganizer"]
margin_right = 430.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "lNSERT CODE"
align = 1

[node name="CodeRow" type="HBoxContainer" parent="ContinueOptionsOrganizer"]
margin_top = 24.0
margin_right = 430.0
margin_bottom = 50.0

[node name="CodeLabel" type="Label" parent="ContinueOptionsOrganizer/CodeRow"]
margin_top = 3.0
margin_right = 62.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 3 )
text = "CODE"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="ContinueOptionsOrganizer/CodeRow"]
margin_left = 66.0
margin_right = 334.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterCodeButton" type="Button" parent="ContinueOptionsOrganizer/CodeRow"]
margin_left = 338.0
margin_right = 430.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "ENTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseContinueButton" type="Button" parent="."]
margin_left = 370.0
margin_top = 170.0
margin_right = 460.0
margin_bottom = 196.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 4 )
text = "CLOSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InsertCodeExplanationLabel" type="Label" parent="."]
margin_left = 32.5816
margin_top = 87.7637
margin_right = 472.582
margin_bottom = 159.764
custom_fonts/font = SubResource( 5 )
text = "Insert a code to skip previous levels in case you lost."
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ContinueOptionsOrganizer/CodeRow/EnterCodeButton" to="." method="_on_EnterCodeButton_pressed"]
[connection signal="pressed" from="CloseContinueButton" to="." method="_on_CloseContinueButton_pressed"]
